--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "zsh/prezto"]
-	path = zsh/prezto
-	url = https://github.com/sorin-ionescu/prezto.git
+  path = zsh/prezto
+  url = https://github.com/zsh-users/prezto.git
   ignore = dirty
