--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,24 @@
 [submodule "zsh/prezto/modules/autosuggestions/external"]
-	path = zsh/prezto/modules/autosuggestions/external
-	url = https://github.com/zsh-users/zsh-autosuggestions
+  path = zsh/prezto/modules/autosuggestions/external
+  url = https://github.com/zsh-users/zsh-autosuggestions
 [submodule "zsh/prezto/modules/history-substring-search/external"]
-	path = zsh/prezto/modules/history-substring-search/external
-	url = https://github.com/zsh-users/zsh-history-substring-search.git
+  path = zsh/prezto/modules/history-substring-search/external
+  url = https://github.com/zsh-users/zsh-history-substring-search.git
 [submodule "zsh/prezto/modules/syntax-highlighting/external"]
-	path = zsh/prezto/modules/syntax-highlighting/external
-	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+  path = zsh/prezto/modules/syntax-highlighting/external
+  url = https://github.com/zsh-users/zsh-syntax-highlighting.git
 [submodule "zsh/prezto/modules/completion/external"]
-	path = zsh/prezto/modules/completion/external
-	url = https://github.com/zsh-users/zsh-completions.git
+  path = zsh/prezto/modules/completion/external
+  url = https://github.com/zsh-users/zsh-completions.git
 [submodule "zsh/prezto/modules/prompt/external/powerline"]
-	path = zsh/prezto/modules/prompt/external/powerline
-	url = https://github.com/davidjrice/prezto_powerline.git
+  path = zsh/prezto/modules/prompt/external/powerline
+  url = https://github.com/davidjrice/prezto_powerline.git
 [submodule "zsh/prezto/modules/prompt/external/agnoster"]
-	path = zsh/prezto/modules/prompt/external/agnoster
-	url = https://github.com/agnoster/agnoster-zsh-theme.git
+  path = zsh/prezto/modules/prompt/external/agnoster
+  url = https://github.com/agnoster/agnoster-zsh-theme.git
 [submodule "zsh/prezto/modules/prompt/functions/pure"]
-	path = zsh/prezto/modules/prompt/external/pure
-	url = https://github.com/sindresorhus/pure.git
+  path = zsh/prezto/modules/prompt/external/pure
+  url = https://github.com/sindresorhus/pure.git
+[submodule "zsh/prezto/modules/fasd/external"]
+  path = zsh/prezto/modules/fasd/external
+  url = https://github.com/clvv/fasd
