--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,10 @@
+# Set bell to visual
+set -g visual-bell on
+
 # Ring the bell if any background window rang a bell
 set -g bell-action any
 
-# Default termtype. If the rcfile sets $TERM, that overrides this value.
+ Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal screen-256color
 
 # Keep your finger on ctrl, or don't
@@ -67,7 +70,7 @@ set-option -g default-command "which reattach-to-user-namespace > /dev/null && r
 # Screen like binding
 unbind C-b
 set -g prefix C-a
-bind a send-prefix
+bind C-a send-prefix
 
 # No escape time for vi mode
 set -sg escape-time 0
