--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,9 @@
 # Set bell to visual
 set -g visual-bell on
 
+# Set shell
+set-option -g default-shell $MAALI_ZSH_HOME/bin/zsh
+
 # Ring the bell if any background window rang a bell
 set -g bell-action any
 
@@ -65,7 +68,7 @@ set -g window-status-current-format '#[fg=colour234,bg=colour39]⮀#[fg=black,bg
 set-option -g status-interval 2
 
 # Patch for OS X pbpaste and pbcopy under tmux.
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+#set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 # Screen like binding
 unbind C-b
