--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ set-option -g default-shell $MAALI_ZSH_HOME/bin/zsh
 # Ring the bell if any background window rang a bell
 set -g bell-action any
 
- Default termtype. If the rcfile sets $TERM, that overrides this value.
+# Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal screen-256color
 
 # Keep your finger on ctrl, or don't
