--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -30,4 +30,4 @@ PostCheckout:
    quiet: true # Change all post-checkout hooks to only display output on failure
 
   IndexTags:
-    enabled: true # Generate a tags file with `ctags` each time HEAD changes
+    enabled: false # Generate a tags file with `ctags` each time HEAD changes
