--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,9 @@ set -g bell-action any
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal screen-256color
 
+# Destroy any unattached sessions
+set -g destroy-unattached on
+
 # Keep your finger on ctrl, or don't
 bind-key ^D detach-client
 
