--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@
 set -g visual-bell on
 
 # Set shell
-set-option -g default-shell $MAALI_ZSH_HOME/bin/zsh
+#set-option -g default-shell $MAALI_ZSH_HOME/bin/zsh
 
 # Ring the bell if any background window rang a bell
 set -g bell-action any
