--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,72 +2,29 @@
 # ------------- General Settings -------------
 # --------------------------------------------
 
-# Screen like binding
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# Server options
+set -g buffer-limit 20                   # Increase buffer size
+set -g history-limit 50000               # Bigger history
+set -g escape-time 5                     # No escape time for vi mode
+set -g default-terminal screen-256color  # Default termtype. If the rcfile sets $TERM, that overrides this value.
 
-# Screen like binding for last window
-unbind l
-bind C-a last-window
-
-# Set bell to visual
-set -g visual-bell on
-
-# Activity bell and whistles
-set -g visual-activity on
-
-# Ring the bell if any background window rang a bell
-set -g bell-action any
-
-# Default termtype. If the rcfile sets $TERM, that overrides this value.
-set -g default-terminal screen-256color
-
-# Bigger history
-set -g history-limit 50000
-
-# Increase buffer size
-set -g buffer-limit 20
-
-# Increase status display time
-set -g display-time 1500
-
-# Toggle if window is destroyed when program running in it exits
-set -g remain-on-exit off
-
-# Destroy any unattached sessions
-set -g destroy-unattached on
-
-# Set key repeat time
-set -g repeat-time 300
-
-# Keep your finger on ctrl, or don't
-bind-key ^D detach-client
-
-# Change copy mode (⌘ ↑)
-bind -n M-Up copy-mode
-
-# Use vi keybindings for tmux commandline input.
-# Note that to get command mode you need to hit ESC twice...
-set -g status-keys vi
-
-# No escape time for vi mode
-set -sg escape-time 0
-
-# set first window to index 1 (not 0) to map more to the keyboard layout...
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
-
-# Enable mouse support
-set-window-option -g mouse on
-
-# Contstrain window to size of smallest client actually displaying that window
-setw -g aggressive-resize on
-
-# Set parent terminal title to reflect current window in tmux session
-set -g set-titles on
+# Session options
+set -g base-index 1                      # set first window to index 1 (not 0)
+setw -g pane-base-index 1                # set first pane to index 1 (not 0)
+set -g visual-bell on                    # Set bell to visual
+set -g bell-action any                   # Ring the bell if any background window rang a bell
+set -g monitor-bell on                   # monitor bells in other windows
+setw -g monitor-activity on              # Monitor activity
+set -g visual-activity off               # But turn off status message
+set -g display-time 1500                 # Increase status display time
+set -g repeat-time 300                   # Set key repeat time
+set -g remain-on-exit off                # Toggle if window is destroyed when program running in it exits
+set -g destroy-unattached on             # Destroy any unattached sessions
+set -g status-keys vi                    # Use vi keybindings for tmux commandline input (Note that to get command mode you need to hit ESC twice)
+set-window-option -g mouse on            # Enable mouse support
+setw -g aggressive-resize on             # Contstrain window to size of smallest client actually displaying that window
+set -g set-titles on                     # Set parent terminal title to reflect current window in tmux session
 set -g set-titles-string "#I:#W"
-
 
 
 # --------------------------------------------
@@ -82,6 +39,21 @@ unbind n    # next-window
 unbind p    # previous-window
 unbind l    # last-window
 unbind o    # focus through panes
+
+# Screen like binding
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# Screen like binding for last window
+unbind l
+bind C-a last-window
+
+# Keep your finger on ctrl, or don't
+bind-key ^D detach-client
+
+# Change copy mode (⌘ ↑)
+bind -n M-Up copy-mode
 
 # Edit configuration and reload
 bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
@@ -170,6 +142,11 @@ set -g assume-paste-time 0
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
 
+# Toggle silence checking or activity checking in window
+bind * setw monitor-silence 0\; setw monitor-activity on\; display "Monitoring for window activity"
+bind '#' setw monitor-silence 30\; setw monitor-activity off\; display "Monitoring for window silence"
+
+
 
 # --------------------------------------------
 # ----- Copy mode, scroll, and clipboard -----
@@ -232,41 +209,51 @@ set -g status on
 set -g status-interval 2
 set -g status-position bottom
 set -g status-justify centre
-set -g status-right-length 451
 
-
-# Color scheme (styled as vim-powerline)
+# Message
+set -g message-style "fg=colour8,bg=colour3,bold"
 
 # Basic status bar colors
-set -g status-bg colour235
-set -g status-fg white
-
-# Left side of status bar
-set -g status-left-length 52
-set -g status-left '#[fg=black,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour235]⮀'
-
-#Window status
-#set -g window-status-format '  #I #W  '
-#set -g window-status-current-format '#[fg=colour234,bg=colour4]⮀#[fg=black,bg=colour4,noreverse,bold] #{?window_zoomed_flag,#[fg=colour228],} #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) #W #[fg=colour4,bg=colour234,nobold]⮀'
-
-
-#set -g status-style fg=white,bg=colour234
-#set -g pane-border-style fg=colour245
-#set -g pane-active-border-style fg=colour39
-#set -g message-style fg=colour16,bg=colour3,bold
-#set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
-#set -g window-status-format '#[fg=colour235,bg=colour252,bold] #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) #W '
-
-# Configure tmux-prefix-highlight colors
-#set -g @prefix_highlight_output_prefix '['
-#set -g @prefix_highlight_output_suffix ']'
-#set -g @prefix_highlight_fg "colour13"
-#set -g @prefix_highlight_bg "colour234"
-#set -g @prefix_highlight_show_copy_mode 'on'
-#set -g @prefix_highlight_copy_mode_attr "fg=colour9,bg=colour234"
+set -g status-bg "colour8"
+set -g status-fg colour12
 
 # Define widgets
-wg_is_keys_off="#[fg=colour252,bg=colour196]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
+wg_session="#[fg=colour8,bg=colour14]  #[fg=colour14,bg=colour3]#[fg=colour8,bg=colour3] ❐ #(hostname) #[fg=colour3,bg=colour8]     #{prefix_highlight}"
+wg_zoom="#{?window_zoomed_flag,#[fg=colour15],}"
+wg_date="#[fg=colour2,bg=colour14]#[fg=colour8,bg=colour2]   %d-%b-%y "
+wg_time="#[fg=colour14,bg=colour8]#[fg=colour8,bg=colour14]   %H:%M:%S"
+wg_battery="#{battery_color_bg}#[fg=colour14,bg=colour8]#{battery_icon_charge}"
+wg_is_keys_off="#[fg=colour15,bg=colour1]#([ $(tmux show-option -qv key-table) = 'off' ] && echo ' OFF ')#[default]"
+wg_window_left="#[fg=colour4,bg=colour8]#[fg=colour8,bg=colour4,noreverse,bold]"
+wg_window_right="#[fg=colour4,bg=colour8,nobold]"
+wg_window="#{pane_current_path}"
+
+# Lef side of status bar
+set -g status-left-length 52
+set -g status-left "$wg_session     $wg_is_keys_off"
+
+# Right side of status bar
+set -g status-right-length 200
+set -g status-right-style "bg=colour8,fg=colour12"
+set -g status-right "$wg_os   $wg_battery   $wg_time $wg_date"
+
+# Window status
+set -g window-status-format "   $wg_window | #W"
+set -g window-status-current-format "$wg_window_left$wg_zoom   $wg_window | #W $wg_window_right "
+
+# Activity window
+setw -g window-status-activity-style reverse
+setw -g window-status-activity-style bg="colour8",fg="colour9"
+
+# Window panes
+set -g pane-border-style fg=colour12
+set -g pane-active-border-style fg=colour4
+
+# Configure tmux-prefix-highlight colors
+set -g @prefix_highlight_fg "colour8"
+set -g @prefix_highlight_bg "colour13"
+set -g @prefix_highlight_show_copy_mode "on"
+set -g @prefix_highlight_copy_mode_attr "fg=colour3,bg=colour8"
 
 
 
@@ -290,24 +277,16 @@ if-shell 'test -n "$SSH_CLIENT"' \
 # see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
 
 # Also, change some visual styles when window keys are off
-#bind -T root F12  \
-    #set prefix None \;\
-    #set key-table off \;\
-    #set status-style "fg=$color39,bg=$colour238" \;\
-    #set window-status-current-format "#[fg=colour238,bg=colour254]⮀#[ #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
-#set -g window-status-current-format '#[fg=colour234,bg=colour39]⮀#[fg=black,bg=colour39,noreverse,bold] #{?window_zoomed_flag,#[fg=colour228],} #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) #W #[fg=colour39,bg=colour234,nobold]⮀'
+bind -T root F12  \
+  set prefix None \;\
+  set key-table off \;\
+  if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+  refresh-client -S \;\
 
-    #set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
-    #if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-    #refresh-client -S \;\
-
-#bind -T off F12 \
-  #set -u prefix \;\
-  #set -u key-table \;\
-  #set -u status-style \;\
-  #set -u window-status-current-style \;\
-  #set -u window-status-current-format \;\
-  #refresh-client -S
+bind -T off F12 \
+  set -u prefix \;\
+  set -u key-table \;\
+  refresh-client -S
 
 
 
@@ -327,22 +306,45 @@ set -g update-environment \
 bind '$' run "~/.tmux/renew_env.sh"
 
 
+
 # --------------------------------------------
 # ------------------- Plugins ----------------
 # --------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-fpp'
+set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-reserrect'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/vim-focus-events'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
-# Plugin properties
+# Turn on focus-events
+set -g focus-events on
+
+# Sidebar properties
 set -g @sidebar-tree 't'
 set -g @sidebar-tree-focus 'T'
 set -g @sidebar-tree-command 'tree -C'
 
+# Open settings
 set -g @open-S 'https://www.google.com/search?q='
+
+# Battery plugin properties
+set -g @batt_icon_charge_tier8 ''
+set -g @batt_icon_charge_tier7 ''
+set -g @batt_icon_charge_tier6 ''
+set -g @batt_icon_charge_tier5 ''
+set -g @batt_icon_charge_tier4 ''
+set -g @batt_icon_charge_tier3 '#[fg=colour3]'
+set -g @batt_icon_charge_tier2 '#[fg=colour9]'
+set -g @batt_icon_charge_tier1 '#[fg=colour1]'
 
 # Run all plugins' scripts
 run -b '~/.tmux/plugins/tpm/tpm'
