Updating for AWS

--- a/ssh/config
+++ b/ssh/config
@@ -7,8 +7,8 @@ ForwardX11 no
 ForwardX11Trusted yes
 
 # Fix for OSX Sierra no longer saving ssh keys in keychain
-#AddKeysToAgent yes
-#UseKeychain yes
+AddKeysToAgent yes
+UseKeychain yes
 
 # Set up session keep alive settings
 ServerAliveInterval 100
@@ -19,61 +19,33 @@ Host bitbucket.org
     IdentityFile ~/.ssh/bitbucket_rsa
     IdentitiesOnly yes
 
-Host chaos
-    Hostname chaos.pawsey.org.au
-    User bskjerven
-    IdentityFile ~/.ssh/pawsey_rsa
-
-Host cori
-    Hostname cori.nersc.gov
-    User skjerven
-    IdentityFile ~/.ssh/nersc_rsa
-
-Host cug
-    Hostname cug.org
-    User crayusergroup
-    IdentityFile ~/.ssh/cug_rsa
-
-Host edison
-    Hostname edison.nersc.gov
-    User skjerven
-    IdentityFile ~/.ssh/nersc_rsa
-
-Host galaxy
-    Hostname galaxy-1.pawsey.org.au
-    User bskjerven
-    IdentityFile ~/.ssh/pawsey_rsa
-
 Host github.com
     User git
     IdentityFile ~/.ssh/github_rsa
     IdentitiesOnly yes
 
-Host hpc-data
-    Hostname hpc-data.pawsey.org.au
-    User bskjerven
-    IdentityFile ~/.ssh/pawsey_rsa
+Host euler nas
+    Hostname euler.home.skjerven.io
+    User nas-admin
+    Port 2022
+    IdentityFile ~/.ssh/euler_rsa
+    IdentitiesOnly yes
 
-Host magnus
-    Hostname magnus-1.pawsey.org.au
-    User bskjerven
-    IdentityFile ~/.ssh/pawsey_rsa
+Host klein
+    Hostname klein.home.skjerven.io
+    User nas-admin
+    Port 2022
+    IdentityFile ~/.ssh/klein_rsa
+    IdentitiesOnly yes
 
-Host msi
-    Hostname login.msi.umn.edu
-    User skjerve1
-    IdentityFile ~/.ssh/msi_rsa
+Host newton kube
+    Hostname newton.home.skjerven.io
+    User kube-admin
+    IdentityFile ~/.ssh/newton_rsa
+    IdentitiesOnly yes
 
-Host nimbus
-    Hostname nimbus.skjerven.me
-    User bskjerven
-    IdentityFile ~/.ssh/nimbus_rsa_bskjerven
-
-Host xsede
-    Hostname login.xsede.org
-    User skjerven
-
-Host zeus
-    Hostname zeus.pawsey.org.au
-    User bskjerven
-    IdentityFile ~/.ssh/pawsey_rsa
+Host pihole
+    Hostname pi.hole
+    User pihole
+    IdentityFile ~/.ssh/pihole_rsa
+    IdentitiesOnly yes
