--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -220,8 +220,8 @@ set -g status-fg colour12
 # Define widgets
 wg_session="#[fg=colour8,bg=colour14]  #[fg=colour14,bg=colour3]#[fg=colour8,bg=colour3] ❐ #(hostname) #[fg=colour3,bg=colour8]     #{prefix_highlight}"
 wg_zoom="#{?window_zoomed_flag,#[fg=colour15],}"
-wg_date="#[fg=colour2,bg=colour14]#[fg=colour8,bg=colour2]   %d-%b-%y "
-wg_time="#[fg=colour14,bg=colour8]#[fg=colour8,bg=colour14]   %H:%M:%S"
+wg_date="#[fg=colour2,bg=colour14]#[fg=colour8,bg=colour2]  %d-%b-%y "
+wg_time="#[fg=colour14,bg=colour8]#[fg=colour8,bg=colour14]  %H:%M"
 wg_battery="#{battery_color_bg}#[fg=colour14,bg=colour8]#{battery_icon_charge}"
 wg_is_keys_off="#[fg=colour15,bg=colour1]#([ $(tmux show-option -qv key-table) = 'off' ] && echo ' OFF ')#[default]"
 wg_window_left="#[fg=colour4,bg=colour8]#[fg=colour8,bg=colour4,noreverse,bold]"
