--- a/ssh/config
+++ b/ssh/config
@@ -24,6 +24,19 @@ Host github.com
     IdentityFile ~/.ssh/github_rsa
     IdentitiesOnly yes
 
+Host gitlab.com
+    User git
+    IdentityFile ~/.ssh/gitlab_rsa
+    IdentitiesOnly yes
+
+Host ssh.gitlab.aws.dev
+    User git
+    IdentityFile ~/.ssh/aws_rsa
+
+Host ssh.dev.azure.com
+    User git
+    IdentityFile ~/.ssh/aws_rsa
+
 Host swarm-node1
     Hostname swarm-node1.skjerven.io
     User admin-local
