--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,7 +56,7 @@ bind-key ^D detach-client
 bind -n M-Up copy-mode
 
 # Edit configuration and reload
-bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
+bind C-e new-window -n 'tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
 
 # Force a reload of the config file
 bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -111,7 +111,7 @@ bind -r C-o swap-pane -D
 bind + resize-pane -Z
 
 # Link window
-bind L command-prompt -p "Link window from (session:window): " "link-window -s %% -a"
+bind M-l command-prompt -p "Link window from (session:window): " "link-window -s %% -a"
 
 # Kill pane/window/session shortcuts
 bind x kill-pane
@@ -222,11 +222,13 @@ set -g status-bg "colour8"
 set -g status-fg colour12
 
 # Define widgets
-wg_session="#[fg=colour8,bg=colour14]  #[fg=colour14,bg=colour3]#[fg=colour8,bg=colour3] ❐ #(hostname) #[fg=colour3,bg=colour8]     #{prefix_highlight}"
+wg_session="#[fg=colour8,bg=colour14]  #[fg=colour14,bg=colour3]#[fg=colour8,bg=colour3]  #(hostname -s) #[fg=colour3,bg=colour8]     #{prefix_highlight}"
 wg_zoom="#{?window_zoomed_flag,#[fg=colour15],}"
-wg_date="#[fg=colour2,bg=colour14]#[fg=colour8,bg=colour2]  %d-%b-%y "
-wg_time="#[fg=colour14,bg=colour8]#[fg=colour8,bg=colour14]  %H:%M"
-wg_battery="#{battery_color_bg}#[fg=colour14,bg=colour8]#{battery_icon_charge}"
+wg_date="#[fg=colour2,bg=colour14]#[fg=colour8,bg=colour2]  %d-%b-%y"
+wg_time="#[fg=colour14,bg=colour8]#[fg=colour8,bg=colour14]  %H:%M"
+wg_music="#{now_playing}"
+wg_battery="#{battery_color_bg}#[fg=colour14,bg=colour8]#{battery_icon_status} #{battery_icon_charge} "
+wg_system_load="#[fg=colour14,bg=colour8]#(tmux-mem-cpu-load --interval 1 --averages-count 0 --mem-mode 1 --cpu-mode 0 --graph-lines 6)"
 wg_is_keys_off="#[fg=colour15,bg=colour1]#([ $(tmux show-option -qv key-table) = 'off' ] && echo ' OFF ')#[default]"
 wg_window_left="#[fg=colour4,bg=colour8]#[fg=colour8,bg=colour4,noreverse,bold]"
 wg_window_right="#[fg=colour4,bg=colour8,nobold]"
@@ -237,12 +239,12 @@ set -g status-left-length 52
 set -g status-left "$wg_session     $wg_is_keys_off"
 
 # Right side of status bar
-set -g status-right-length 200
+set -g status-right-length 500
 set -g status-right-style "bg=colour8,fg=colour12"
-set -g status-right "$wg_os   $wg_battery   $wg_time $wg_date"
+set -g status-right "$wg_battery $wg_system_load $wg_time $wg_date$wg_music "
 
 # Window status
-set -g window-status-format "   $wg_window | #W"
+set -g window-status-format "  $wg_window | #W"
 set -g window-status-current-format "$wg_window_left$wg_zoom   $wg_window | #W $wg_window_right "
 
 # Activity window
@@ -319,15 +321,16 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-now-playing'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-reserrect'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'tmux-plugins/vim-focus-events'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # Turn on focus-events
 set -g focus-events on
@@ -337,18 +340,35 @@ set -g @sidebar-tree 't'
 set -g @sidebar-tree-focus 'T'
 set -g @sidebar-tree-command 'tree -C'
 
+set -g @prefix_highlight_fg 'white' # default is 'colour231'
+set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
+
 # Open settings
 set -g @open-S 'https://www.google.com/search?q='
 
 # Battery plugin properties
-set -g @batt_icon_charge_tier8 ''
-set -g @batt_icon_charge_tier7 ''
-set -g @batt_icon_charge_tier6 ''
-set -g @batt_icon_charge_tier5 ''
-set -g @batt_icon_charge_tier4 ''
-set -g @batt_icon_charge_tier3 '#[fg=colour3]'
-set -g @batt_icon_charge_tier2 '#[fg=colour9]'
-set -g @batt_icon_charge_tier1 '#[fg=colour1]'
+set -g @batt_icon_charge_tier8 ''
+set -g @batt_icon_charge_tier7 ''
+set -g @batt_icon_charge_tier6 ''
+set -g @batt_icon_charge_tier5 ''
+set -g @batt_icon_charge_tier4 ''
+set -g @batt_icon_charge_tier3 '#[fg=colour3]'
+set -g @batt_icon_charge_tier2 '#[fg=colour9]'
+set -g @batt_icon_charge_tier1 '#[fg=colour1]'
+set -g @batt_icon_status_charged ''
+set -g @batt_icon_status_charging 'ﮣ'
+set -g @batt_icon_status_discharging 'ﮤ'
+set -g @batt_icon_status_attached '#[fg=colour220]'
+set -g @batt_icon_status_unknown '#[fg=colour220]'
+
+# Now Playing options
+set -g @now-playing-status-format '{icon} {scrollable}'
+set -g @now-playing-scrollable-format '{artist} - {title}'
+set -g @now-playing-scrollable-threshold '25'
+set -g @now-playing-auto-interval 'yes'
+set -g @now-playing-paused-interval '2'
+set -g @now-playing-playing-icon ' │ ﱘ'
+set -g @now-playing-paused-icon ' │ '
 
 # Run all plugins' scripts
 run -b '~/.tmux/plugins/tpm/tpm'
