--- a/ssh/config
+++ b/ssh/config
@@ -43,10 +43,10 @@ Host ssh.dev.azure.com
     User git
     IdentityFile ~/.ssh/aws_rsa
 
-Host swarm-node1
-    Hostname swarm-node1.skjerven.io
-    User admin-local
-    IdentityFile ~/.ssh/swarm_rsa
+Host homelab
+    Hostname homelab.skjerven.io
+    User home-admin
+    IdentityFile ~/.ssh/homelab_rsa
     IdentitiesOnly yes
 
 Host swarm-node2
@@ -80,6 +80,12 @@ Host klein qnap nas3
     User nas-admin
     Port 2022
     IdentityFile ~/.ssh/klein_rsa
+    IdentitiesOnly yes
+
+Host openvpn vpn
+    Hostname vpn.skjerven.io
+    User openvpn-admin
+    IdentityFile ~/.ssh/openvpnas
     IdentitiesOnly yes
 
 Host pihole
