Modified tmux config to reduce crowdstrike usage

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -317,20 +317,17 @@ bind '$' run "~/.tmux/renew_env.sh"
 # ------------------- Plugins ----------------
 # --------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-copycat'
+#set -g @plugin 'tmux-plugins/tmux-battery'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-now-playing'
+#set -g @plugin 'tmux-plugins/tmux-now-playing'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-#set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'samoshkin/tmux-plugin-sysstat'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # Turn on focus-events
 set -g focus-events on
@@ -342,6 +339,10 @@ set -g @sidebar-tree-command 'tree -C'
 
 set -g @prefix_highlight_fg 'white' # default is 'colour231'
 set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
+
+# Resurrect settings
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-capture-pane-contents 'on'
 
 # Open settings
 set -g @open-S 'https://www.google.com/search?q='
@@ -362,13 +363,13 @@ set -g @batt_icon_status_attached '#[fg=colour220]'
 set -g @batt_icon_status_unknown '#[fg=colour220]'
 
 # Now Playing options
-set -g @now-playing-status-format '{icon} {scrollable}'
-set -g @now-playing-scrollable-format '{artist} - {title}'
-set -g @now-playing-scrollable-threshold '25'
-set -g @now-playing-auto-interval 'yes'
-set -g @now-playing-paused-interval '2'
-set -g @now-playing-playing-icon ' │ ﱘ'
-set -g @now-playing-paused-icon ' │ '
+#set -g @now-playing-status-format '{icon} {scrollable}'
+#set -g @now-playing-scrollable-format '{artist} - {title}'
+#set -g @now-playing-scrollable-threshold '25'
+#set -g @now-playing-auto-interval 'yes'
+#set -g @now-playing-paused-interval '2'
+#set -g @now-playing-playing-icon ' │ ﱘ'
+#set -g @now-playing-paused-icon ' │ '
 
 # Run all plugins' scripts
-run -b '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
