--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -210,7 +210,7 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \;\
 
 # General status bar settings
 set -g status on
-set -g status-interval 2
+set -g status-interval 15
 set -g status-position bottom
 set -g status-justify centre
 
@@ -317,11 +317,11 @@ bind '$' run "~/.tmux/renew_env.sh"
 # ------------------- Plugins ----------------
 # --------------------------------------------
 set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-battery'
-#set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-logging'
-#set -g @plugin 'tmux-plugins/tmux-now-playing'
+set -g @plugin 'tmux-plugins/tmux-now-playing'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -337,6 +337,7 @@ set -g @sidebar-tree 't'
 set -g @sidebar-tree-focus 'T'
 set -g @sidebar-tree-command 'tree -C'
 
+# Prefix highlighting
 set -g @prefix_highlight_fg 'white' # default is 'colour231'
 set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
 
@@ -363,13 +364,14 @@ set -g @batt_icon_status_attached '#[fg=colour220]'
 set -g @batt_icon_status_unknown '#[fg=colour220]'
 
 # Now Playing options
-#set -g @now-playing-status-format '{icon} {scrollable}'
-#set -g @now-playing-scrollable-format '{artist} - {title}'
-#set -g @now-playing-scrollable-threshold '25'
-#set -g @now-playing-auto-interval 'yes'
-#set -g @now-playing-paused-interval '2'
-#set -g @now-playing-playing-icon ' │ ﱘ'
-#set -g @now-playing-paused-icon ' │ '
+set -g @now-playing-status-format '{icon} {scrollable}'
+set -g @now-playing-scrollable-format '{artist}  - {title}'
+set -g @now-playing-scrollable-threshold '25'
+set -g @now-playing-auto-interval 'no'
+set -g @now-playing-playing-interval '2'
+set -g @now-playing-paused-interval '15'
+set -g @now-playing-playing-icon ' │ ﱘ'
+set -g @now-playing-paused-icon ' │ '
 
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
