--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 custom/zsh
-
 vim/backups
 vim/undodir
 vim/view
@@ -10,7 +9,7 @@ vim/spell
 vim/after/.vimrc.after
 vim/.vundles.local
 vim/.vundles.local.bak
-vim/bundle
+vim/bundle/*
 vim/sessions
 .netrwhist
 bin/subl
