--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,10 +69,10 @@ bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
 # Create splits and vertical splits
-bind-key v split-window -h -p 50 -c "#{pane_current_path}"
-bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
-bind-key s split-window -p 50 -c "#{pane_current_path}"
-bind-key ^S split-window -p 50 -c "#{pane_current_path}"
+bind-key v split-window -h -l 50% -c "#{pane_current_path}"
+bind-key ^V split-window -h -l 50% -c "#{pane_current_path}"
+bind-key s split-window -l 50% -c "#{pane_current_path}"
+bind-key ^S split-window -l 50% -c "#{pane_current_path}"
 
 # Pane resize in all four directions using vi bindings.
 bind -r H resize-pane -L 5
