Updated tmux plugins, added tmux plugin installation to Rakefile

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -310,13 +310,14 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-now-playing'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'spywhere/tmux-now-playing'
 
 # Turn on focus-events
 set -g focus-events on
@@ -325,6 +326,7 @@ set -g focus-events on
 set -g @sidebar-tree 't'
 set -g @sidebar-tree-focus 'T'
 set -g @sidebar-tree-command 'tree -C'
+set -g @sidebar-tree-width '70'
 
 # Prefix highlighting
 set -g @prefix_highlight_fg 'white' # default is 'colour231'
@@ -354,11 +356,11 @@ set -g @batt_icon_status_unknown '#[fg=colour220]'
 
 # Now Playing options
 set -g @now-playing-status-format '{icon} {scrollable}'
-set -g @now-playing-scrollable-format '{artist}  - {title}'
-set -g @now-playing-scrollable-threshold '25'
+set -g @now-playing-scrollable-format '{artist} - {title}'
+set -g @now-playing-scrollable-threshold '13'
 set -g @now-playing-auto-interval 'no'
 set -g @now-playing-playing-interval '2'
-set -g @now-playing-paused-interval '15'
+set -g @now-playing-paused-interval '10'
 set -g @now-playing-playing-icon ' │ ﱘ'
 set -g @now-playing-paused-icon ' │ '
 
