Updating OSX configuration file

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -255,6 +255,9 @@ set -g @prefix_highlight_bg "colour13"
 set -g @prefix_highlight_show_copy_mode "on"
 set -g @prefix_highlight_copy_mode_attr "fg=colour3,bg=colour8"
 
+#set -Fg 'status-format[1]' '#{status-format[0]}'
+#set -g 'status-format[0]' ''
+#set -g status 2
 
 # --------------------------------------------
 # ------ Nesting local & remote sessions -----
