--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -132,9 +132,6 @@ bind D if -F '#{session_many_attached}' \
     'confirm-before -p "Detach other clients? (y/n)" "detach -a"' \
     'display "Session has only 1 client attached"'
 
-# Hide status bar on demand
-bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
-
 # Patch for OS X pbpaste and pbcopy under tmux.
 #set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 # Easily toggle synchronization (mnemonic: e is for echo)
@@ -158,7 +155,7 @@ bind p paste-buffer
 bind C-p choose-buffer
 
 # trigger copy mode by
-bind -n M-Up copy-mode
+bind M-Up copy-mode
 
 # Scroll up/down by 1 line, half screen, whole screen
 bind -T copy-mode-vi M-Up              send-keys -X scroll-up
@@ -216,10 +213,10 @@ set -g status-bg "colour8"
 set -g status-fg colour12
 
 # Define widgets
-wg_session="#[fg=colour8,bg=colour14]  #[fg=colour14,bg=colour3]#[fg=colour8,bg=colour3]  #(hostname -s) #[fg=colour3,bg=colour8]     #{prefix_highlight}"
+wg_session="#[fg=colour8,bg=colour14]  #[fg=colour14,bg=colour3]#[fg=colour8,bg=colour3] 󰇄 #(hostname -s) #[fg=colour3,bg=colour8]     #{prefix_highlight}"
 wg_zoom="#{?window_zoomed_flag,#[fg=colour15],}"
-wg_date="#[fg=colour2,bg=colour14]#[fg=colour8,bg=colour2]  %d-%b-%y"
-wg_time="#[fg=colour14,bg=colour8]#[fg=colour8,bg=colour14]  %H:%M"
+wg_date="#[fg=colour2,bg=colour14]#[fg=colour8,bg=colour2]   %d-%b-%y"
+wg_time="#[fg=colour14,bg=colour8]#[fg=colour8,bg=colour14]  %H:%M"
 wg_music="#{now_playing}"
 wg_battery="#{battery_color_bg}#[fg=colour14,bg=colour8]#{battery_icon_status} #{battery_icon_charge} "
 wg_system_load="#[fg=colour14,bg=colour8]#(tmux-mem-cpu-load --interval 1 --averages-count 0 --mem-mode 1 --cpu-mode 0 --graph-lines 6)"
@@ -255,9 +252,9 @@ set -g @prefix_highlight_bg "colour13"
 set -g @prefix_highlight_show_copy_mode "on"
 set -g @prefix_highlight_copy_mode_attr "fg=colour3,bg=colour8"
 
-#set -Fg 'status-format[1]' '#{status-format[0]}'
-#set -g 'status-format[0]' ''
-#set -g status 2
+# Hide status bar on demand
+bind C-b if -F '#{s/off//:status}' 'set status off' 'set status on'
+
 
 # --------------------------------------------
 # ------ Nesting local & remote sessions -----
@@ -343,17 +340,17 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @open-S 'https://www.google.com/search?q='
 
 # Battery plugin properties
-set -g @batt_icon_charge_tier8 ''
-set -g @batt_icon_charge_tier7 ''
-set -g @batt_icon_charge_tier6 ''
-set -g @batt_icon_charge_tier5 ''
-set -g @batt_icon_charge_tier4 ''
-set -g @batt_icon_charge_tier3 '#[fg=colour3]'
-set -g @batt_icon_charge_tier2 '#[fg=colour9]'
-set -g @batt_icon_charge_tier1 '#[fg=colour1]'
+set -g @batt_icon_charge_tier8 '󰁹'
+set -g @batt_icon_charge_tier7 '󰂁'
+set -g @batt_icon_charge_tier6 '󰁿'
+set -g @batt_icon_charge_tier5 '󰁾'
+set -g @batt_icon_charge_tier4 '󰁽'
+set -g @batt_icon_charge_tier3 '#[fg=colour3]󰁼'
+set -g @batt_icon_charge_tier2 '#[fg=colour9]󰁻'
+set -g @batt_icon_charge_tier1 '#[fg=colour1]󰁺'
 set -g @batt_icon_status_charged ''
-set -g @batt_icon_status_charging 'ﮣ'
-set -g @batt_icon_status_discharging 'ﮤ'
+set -g @batt_icon_status_charging '󰚥'
+set -g @batt_icon_status_discharging '󰚦'
 set -g @batt_icon_status_attached '#[fg=colour220]'
 set -g @batt_icon_status_unknown '#[fg=colour220]'
 
@@ -362,10 +359,12 @@ set -g @now-playing-status-format '{icon} {scrollable}'
 set -g @now-playing-scrollable-format '{artist} - {title}'
 set -g @now-playing-scrollable-threshold '13'
 set -g @now-playing-auto-interval 'no'
-set -g @now-playing-playing-interval '2'
+set -g @now-playing-playing-interval '1'
 set -g @now-playing-paused-interval '10'
-set -g @now-playing-playing-icon ' │ ﱘ'
-set -g @now-playing-paused-icon ' │ '
+set -g @now-playing-playing-icon ' │  '
+set -g @now-playing-paused-icon ' │ '
+
+bind-key -T prefix M-j run-shell "bash /Users/brian/test.sh --cmd pause >> /tmp/tmux_music_debug.log 2>&1"
 
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
