Updated tmux config to fix colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,8 +6,8 @@
 set -g buffer-limit 20                   # Increase buffer size
 set -g history-limit 50000               # Bigger history
 set -g escape-time 5                     # No escape time for vi mode
-set -g default-terminal tmux-256color    # Default termtype. If the rcfile sets $TERM, that overrides this value.
-set -as terminal-features ',*:RGB'
+set -g default-terminal screen-256color  # Default termtype. If the rcfile sets $TERM, that overrides this value.
+#set -as terminal-features ',*:RGB'
 
 # Session options
 set -g base-index 1                      # set first window to index 1 (not 0)
